--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6"
   },
-  "name": "tuto-express",
+  "name": "thekarma-dashboard",
   "version": "1.0.0",
   "main": "app.js",
   "devDependencies": {
